# ai-manager

./: .gitignore  .pre-commit-config.yaml  AGENT_PROJECT_ARCHITECTURE.md  AI_MANAGER_SYSTEM.md  LICENSE  README.md  RENAME_STATUS.md  SESSION_CONTEXT.md  env.template  main.py  pyproject.toml  self_hosted_ai_context.py  self_maintenance.py  setup.py
ai_context_manager/: cli.py  core.py
ai_context_self/: README.md  architecture.json  core.json  learning_history.json  maintenance_log.json  troubleshooting.json  user_experience.json  version_history.json
ai_manager/: __init__.py  cli.py  core.py
config/: default.json  jugad_project_ownership.json  maya_game_research_context.json  maya_project_ownership.json  project_management_rules.json
deployment/systemd/: ai-context-manager.service
docs/: CODE_ORGANIZATION_PLAN.md  DEPLOYMENT.md  QUICK_START.md  SESSION_CONTEXT.md  USAGE_WORKFLOW.md  UV_MIGRATION_COMPLETE.md
realtime_communication/: realtime_communication_server.py
scripts/: auto_agent_recovery.py  automated_project_manager.py  autonomous_ai_manager.py  check_ai_context.py  project_manager.py  setup_global_ai_context.py  start.sh  start_all.sh  status.sh  stop.sh  stop_all.sh  validate_self_hosting.py
scripts/legacy/: make_installable_here.py  move_to_separate_repo.sh
src/: __init__.py
src/agents/: __init__.py  ai_context_manager_agent.py  base_intelligent_agent.py  blaze_agent.py  jugad_agent.py  maya_agent.py  maya_agent_v2.py
src/core/: __init__.py  ai_manager.py  claude_manager.py  self_hosted_ai_context.py  startup_manager.py
src/interfaces/: __init__.py
src/services/: api_server.py  database.py  monitoring_service.py
src/utils/: bug_tracker.py  environment.py
templates/desktop_application/: architecture.json  core.json  learning_history.json  troubleshooting.json
web/: serve_web.py
