[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-context-manager"
version = "1.0.0"
description = "Intelligent AI context management system for any project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI Context Manager Team", email = "ai-context-manager@example.com"},
]
keywords = ["ai", "context", "management", "development", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1",
]

[project.scripts]
ai-context = "ai_context_manager.cli:main"
ai-context-init = "ai_context_manager.cli:init_command"
ai-context-maintain = "ai_context_manager.cli:maintain_command"

[project.urls]
Homepage = "https://github.com/ai-context-manager/ai-context-manager"
Repository = "https://github.com/ai-context-manager/ai-context-manager.git"
Issues = "https://github.com/ai-context-manager/ai-context-manager/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_context_manager*"]

[tool.setuptools.package-data]
ai_context_manager = ["templates/*/*.json"]
